# UpDownShooter

./: CMakeLists.txt  Game.cpp  GameObject.cpp  Main.cpp  Map.cpp  README.md
assets/: glowCircle.xcf  glow_frame.xcf  triangle.xcf
include/: Game.hpp  GameObject.hpp  Map.hpp  TextureManager.hpp
