cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
project( UpDownShooter )
find_package(SDL2 REQUIRED)
find_package(SDL2_IMAGE REQUIRED)
set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include/)
set(HEADERS  ${INCLUDE_DIR}/Game.hpp ${INCLUDE_DIR}/GameObject.hpp ${INCLUDE_DIR}/TextureManager.hpp)
set(SOURCES  Game.cpp GameObject.cpp Main.cpp TextureManager.cpp)
include_directories(${INCLUDE_DIR})
add_executable(UpDownShooter ${SOURCES} ${HEADERS})
target_include_directories(UpDownShooter PRIVATE ${PROJECT_BINARY_DIR} ${INCLUDE_DIR})
target_link_libraries(UpDownShooter SDL2 SDL2_image) 
